--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,8 +27,11 @@
           </div>
 
           <nav>
-            <a href="{{ site.baseurl }}/">Blog</a>
-            <a href="{{ site.baseurl }}/about">About</a>
+          	<a href="{{ site.baseurl }}/">blog</a>
+	  	<a href="http://james.kunertgraf.com/index.php">about</a>
+	 	<a href="http://james.kunertgraf.com/research.php">research</a>
+		<a href="http://james.kunertgraf.com/cv.php">cv</a>
+		<a href="http://james.kunertgraf.com/contact.php">contact</a>
           </nav>
         </header>
       </div>
